# rua-winner

./: .gitignore  .versionrc.json  App-working-notes.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: auto-release.yml  sync-version.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: .env.local  middleware.ts  next.config.cjs  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/parse-parquet/: route.ts
apps/web/components/: AboutModal.tsx  AdvancedAnalytics.tsx  AnalyticsPreview.tsx  AnalyticsSettings.tsx  DataContext.tsx  DataImporter.tsx  Header.tsx  HeatmapMode.tsx  Heatmaps.tsx  NumberEvaluator.tsx  OverdueChart.tsx  PrizeClassChart.tsx  Providers.tsx  SettingsGear.tsx  SmartPicks.tsx  ThemeToggle.tsx  UpdateDataButton.tsx
apps/web/types/: parquetjs-lite.d.ts
scripts/: sync-version.mjs
